[package]
name = "graph_solver"
version = "0.2.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
exclude = ["images/*"]
license = "MIT OR Apache-2.0"
description = "An undirected graph constraint solver for node and edge colors"
readme = "README.md"
repository = "https://github.com/advancedresearch/graph_solver.git"
homepage = "https://github.com/advancedresearch/graph_solver"
keywords = ["graph", "solver", "theorem", "theory", "advancedresearch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quickbacktrack = "0.6.0"
